--- a/SwiftDemo/SwiftDemo/Base.lproj/Main.storyboard
+++ b/SwiftDemo/SwiftDemo/Base.lproj/Main.storyboard
@@ -224,7 +224,7 @@
             </objects>
             <point key="canvasLocation" x="922.5" y="138.75"/>
         </scene>
-        <!--Title-->
+        <!--Search View Controller-->
         <scene sceneID="9NN-lI-wJe">
             <objects>
                 <tableViewController id="SO9-6G-XAz" customClass="SearchViewController" customModule="SwiftDemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -247,9 +247,9 @@
                             <outlet property="delegate" destination="SO9-6G-XAz" id="W4M-x6-wKP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="g72-OC-i9S"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="tableView" destination="D3W-nD-Kfj" id="4Tj-ve-FBS"/>
                         <segue destination="jKx-OL-X8R" kind="unwind" identifier="BackToBin" unwindAction="unwindToMenuWithSegue:" id="AZd-3F-n51"/>
                     </connections>
                 </tableViewController>
